<resources>
    <string name="app_name" translatable="false">Your Age In Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="selected_date">Selected Date</string>
    <string name="your_age_in_minutes">Your Age In Minutes</string>
</resources>